fullSandbox11072023/force-app/main/default/objects/Maintenance_Email_Addresses__c/Maintenance_Email_Addresses__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Maintenance Email Addresses</label>
</CustomObject>