fullSandbox11072023/force-app/main/default/objects/Maintenance_Email_Addresses__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Account</label>
    <type>Checkbox</type>
</CustomField>