fullSandbox11072023/force-app/main/default/objects/Maintenance_Email_Addresses__c/fields/Contract_Customer__c.field-meta.xml
<CustomField>
    <fullName>Contract_Customer__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Contract_Customer</label>
    <type>Checkbox</type>
</CustomField>