fullSandbox11072023/force-app/main/default/objects/Maintenance_Email_Addresses__c/fields/Contract_Material__c.field-meta.xml
<CustomField>
    <fullName>Contract_Material__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Contract_Material</label>
    <type>Checkbox</type>
</CustomField>