fullSandbox11072023/force-app/main/default/objects/Maintenance_Email_Addresses__c/fields/Invoiced_Sales__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_Sales__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Invoiced_Sales</label>
    <type>Checkbox</type>
</CustomField>