fullSandbox11072023/force-app/main/default/objects/Maintenance_Email_Addresses__c/fields/Open_Orders__c.field-meta.xml
<CustomField>
    <fullName>Open_Orders__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Open_Orders</label>
    <type>Checkbox</type>
</CustomField>