fullSandbox11072023/force-app/main/default/objects/Maintenance_Email_Addresses__c/fields/SMS_Notification__c.field-meta.xml
<CustomField>
    <fullName>SMS_Notification__c</fullName>
    <label>SMS Notification</label>
    <type>Email</type>
</CustomField>